--- a/views/book-search.handlebars
+++ b/views/book-search.handlebars
@@ -2,7 +2,7 @@
   <li><a href="/clubs-page">Clubs Page</a></li>
   <li><a href="/my-library">My Library</a></li>
   {{!-- <li><a href="/book-search">Book Search</a></li> --}}
-  <li><a href="/">Back to Homepage</a></li>
+  {{!-- <li><a href="/">Back to Homepage</a></li> --}}
 </ul>
 <section>
   <div class="book-search">
