--- a/views/my-library.handlebars
+++ b/views/my-library.handlebars
@@ -1,9 +1,9 @@
 {{!-- <a href="/dashboard/delete-account" class="delete-btn-style">Delete Account</a> --}}
 <ul>
   <li><a href="/clubs-page">Clubs Page</a></li>
-  {{!-- <li><a href="/my-library">My Library</a></li> --}}
+  <li><a href="/my-library">My Library</a></li>
   <li><a href="/book-search">Book Search</a></li>
-  <li><a href="/">Back to Homepage</a></li>
+  {{!-- <li><a href="/">Back to Homepage</a></li> --}}
 </ul>
 <section class="library-container">
   <div class="club-container">
