finished clubspage route to allow user to join a club of their choice

--- a/views/partials/not-in-these-clubs.handlebars
+++ b/views/partials/not-in-these-clubs.handlebars
@@ -13,7 +13,9 @@
         {{dataValues.club_title}}
       </h3>
       {{!-- user join club button submission form --}}
-      <button class="btn btn-primary">Join This Club!</button>
+      <form method="GET" action="/clubs-page/join-club">
+        <button id="club-join-btn" type="submit" name="club" value="{{dataValues.id}}" class="btn btn-primary">Join This Club!</button>
+      </form>
     </div>
   </div>
   {{/each}}
