--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css'>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="icon" type="image/png" href="/stylesheets/favicon.ico">
 </head>
 
 <body>
