--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -12,7 +12,7 @@
   Search books from an extensive library to find the perfect new read and even add it to your own personal library.
   You can also choose from a variety of different clubs based on genres that pique your interest and provides you
   with different book suggestions.
-  If you'd like to join wide world of books, please <a href="/login">Sign Up!</a></p>
+  If you'd like to join wide world of books, please <a class="nav-a" href="/login">Sign Up!</a></p>
 {{/if}}
 {{!-- <h2>Search a book!</h2> --}}
 <script src="/javascript/logout.js"></script>
