--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,8 +16,8 @@
   <!-- div wrapper class -->
   <div class="wrapper">
     <header>
-      <h1 class="nav-styling">
-        <a id="book-club-title" href="/">Book Club .</a>
+      <h1>
+        <a class="title-styling" id="book-club-title" href="/">Book Club .</a>
       </h1>
       <nav>
         {{#if loggedIn}}
@@ -29,7 +29,7 @@
         {{else}}
         
       </nav>
-      <a href="/login">Login</a>
+      <a class="nav-a" href="/login">Login</a>
     </header>
     {{/if}}
 
@@ -37,7 +37,7 @@
       {{{ body }}}
     </main>
     <footer class="footer-box">
-      🔮 Created By: Allie, Anders, Carolina
+      Created By: Allie, Anders, Carolina
     </footer>
   </div>
   <!-- div wrapper class -->
