--- a/views/partials/book-info.handlebars
+++ b/views/partials/book-info.handlebars
@@ -1,6 +1,6 @@
 {{#each this}}
 <section>
-  <div class="card mb-3 book-search">
+  <div class="card mb-3 book-search-result">
     <article class="book">
       <form action="/book-search/add-book" method="POST" id="{{bookId}}">
         <div class="card-img-top book-img-label">
