--- a/views/partials/not-in-these-clubs.handlebars
+++ b/views/partials/not-in-these-clubs.handlebars
@@ -1,5 +1,5 @@
 <div>
-  <h5 class="card-header">
+  <h5 class="card-header club-header">
     Clubs you're currently not following
   </h5>
   <div class="card-body">
