--- a/views/book-search.handlebars
+++ b/views/book-search.handlebars
@@ -1,6 +1,6 @@
 <ul>
-  <li><a href="/clubs-page">Clubs Page</a></li>
-  <li><a href="/my-library">My Library</a></li>
+  <li><a class="nav-a" href="/clubs-page">Clubs Page</a></li>
+  <li><a class="nav-a" href="/my-library">My Library</a></li>
   {{!-- <li><a href="/book-search">Book Search</a></li> --}}
   {{!-- <li><a href="/">Back to Homepage</a></li> --}}
 </ul>
