--- a/views/clubs-page.handlebars
+++ b/views/clubs-page.handlebars
@@ -1,7 +1,7 @@
 <ul>
   {{!-- <li><a href="/clubs-page">Clubs Page</a></li> --}}
-  <li><a href="/my-library">My Library</a></li>
-  <li><a href="/book-search">Book Search</a></li>
+  <li><a class="nav-a" href="/my-library">My Library</a></li>
+  <li><a class="nav-a" href="/book-search">Book Search</a></li>
   {{!-- <li><a href="/">Back to Homepage</a></li> --}}
 </ul>
 <section>
@@ -14,20 +14,20 @@
       <h2>
         All members of your club and what they're currently reading!
       </h2>
+      {{!-- user leave club submission form --}}
+      <form class="leave-club" method="GET" action="/clubs-page/leave-club">
+        <button class="pointer btn btn-primary" id="club-btn" name="club" type="submit" value="{{userClub_id}}">Leave
+          Club
+        </button>
+      </form>
       <div>
         {{!-- user's club info goes here --}}
         {{> club-members clubAllUsers }}
       </div>
   </div>
-  {{!-- user leave club submission form --}}
-  <form class="leave-club" method="GET" action="/clubs-page/leave-club">
-    <button class="pointer btn btn-primary" id="club-btn" name="club" type="submit" value="{{userClub_id}}">Leave
-      Club
-    </button>
-  </form>
 </section>
 {{else}}
-<h1 class="user-club">
+<h1 class="user-club library-header">
   Not in a club? Join the fun!
 </h1>
 {{/if}}
