--- a/views/my-library.handlebars
+++ b/views/my-library.handlebars
@@ -1,8 +1,8 @@
 {{!-- <a href="/dashboard/delete-account" class="delete-btn-style">Delete Account</a> --}}
 <ul>
-  <li><a href="/clubs-page">Clubs Page</a></li>
-  <li><a href="/my-library">My Library</a></li>
-  <li><a href="/book-search">Book Search</a></li>
+  <li><a class="nav-a" href="/clubs-page">Clubs Page</a></li>
+  <li><a class="nav-a" href="/my-library">My Library</a></li>
+  <li><a class="nav-a" href="/book-search">Book Search</a></li>
   {{!-- <li><a href="/">Back to Homepage</a></li> --}}
 </ul>
 <section class="library-container">
@@ -20,8 +20,8 @@
       {{!-- member names are links to look at another users library? will have to be a different page and include books they read and their group association --}}
     </p>
   </div>
-  <div class="library-header">
-    <h2>
+  <div>
+    <h2 class="library-header">
       Your Library Book Collection
     </h2>
   </div>
