--- a/views/partials/club-members.handlebars
+++ b/views/partials/club-members.handlebars
@@ -4,7 +4,7 @@
     {{!-- username  --}}
     {{dataValues.username}}
   </h3>
-  <div class="border-bottom">
+  <div>
   {{#each dataValues.books}}
   <p>
     <span>{{dataValues.book_title}}</span><span> </span><span>by {{dataValues.author}}</span> 
