--- a/views/partials/user-book-library.handlebars
+++ b/views/partials/user-book-library.handlebars
@@ -1,5 +1,5 @@
 {{#each this}}
-<section class="card non-club bg-light mb-3">
+<section class="card users-choice non-club bg-light mb-3">
   <div class="card-hearder user-library">
     Title: {{book_title}}
   </div>
@@ -16,13 +16,11 @@
       {{/if}}
     </div>
     <form method="GET" action="/my-library/delete-book">
-      <button class="pointer btn btn-primary" id="book-{{id}}" name="book" type="submit" value="{{id}}">Delete From Library</button>
+      <button class="pointer btn btn-primary" id="book-{{id}}" name="book" type="submit" value="{{id}}">Delete From
+        Library</button>
     </form>
     {{!-- VERY IMPORTANT dont add any more attributes to the left of id!!! if you must add one put it to the right of id!! --}}
-    {{!-- <button type="book-{{id}}" class="pointer">Delete from Library</button> --}}
-    {{!-- <div class="border-top">
-
-    </div> --}}
+  </div>
   </div>
 </section>
 {{/each}}
