--- a/views/book-search.handlebars
+++ b/views/book-search.handlebars
@@ -1,9 +1,8 @@
-<ul>
-  <li><a class="nav-a" href="/clubs-page">Clubs Page</a></li>
-  <li><a class="nav-a" href="/my-library">My Library</a></li>
-  {{!-- <li><a href="/book-search">Book Search</a></li> --}}
-  {{!-- <li><a href="/">Back to Homepage</a></li> --}}
-</ul>
+<div class="nav-container-custom">
+  <a class="nav-a" href="/clubs-page">Clubs Page</a>
+  <a class="nav-a" href="/my-library">My Library</a>
+</div>
+
 <section>
   <div class="book-search">
     <form id="book-search-form"class="card text-center" method="GET" action="/book-search/search">
