--- a/views/clubs-page.handlebars
+++ b/views/clubs-page.handlebars
@@ -1,9 +1,8 @@
-<ul>
-  {{!-- <li><a href="/clubs-page">Clubs Page</a></li> --}}
-  <li><a class="nav-a" href="/my-library">My Library</a></li>
-  <li><a class="nav-a" href="/book-search">Book Search</a></li>
-  {{!-- <li><a href="/">Back to Homepage</a></li> --}}
-</ul>
+<div class="nav-container-custom">
+  <a class="nav-a" href="/my-library">My Library</a>
+  <a class="nav-a" href="/book-search">Book Search</a>
+</div>
+
 <section>
   {{#if userClub}}
   <div class="in-club">
