--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,18 @@
 {{#if loggedIn}}
-<ul>
-  <li><a href="/clubs-page">Clubs Page</a></li>
-  <li><a href="/my-library">My Library</a></li>
-  <li><a href="/book-search">Book Search</a></li>
-</ul>
+<div class="nav-container-custom">
+  <a class="nav-a" href="/clubs-page">Clubs Page</a>
+  <a class="nav-a" href="/my-library">My Library</a>
+  <a class="nav-a" href="/book-search">Book Search</a>
+</div>
+
 <h2>Welcome back, <span class="username">{{username}}</span> </h2>
 {{else}}
 <p class="description-box">Welcome to Book Club! This app allows you to explore the world of books and join book clubs
   at the
   same time.
   Search books from an extensive library to find the perfect new read and even add it to your own personal library.
-  You can also choose from a variety of different clubs based on genres that pique your interest and provides you
+  You can also choose from a variety of different clubs that pique your interest and provides you
   with different book suggestions.
   If you'd like to join wide world of books, please <a class="nav-a" href="/login">Sign Up!</a></p>
 {{/if}}
-{{!-- <h2>Search a book!</h2> --}}
 <script src="/javascript/logout.js"></script>
