--- a/views/my-library.handlebars
+++ b/views/my-library.handlebars
@@ -1,10 +1,10 @@
-{{!-- <a href="/dashboard/delete-account" class="delete-btn-style">Delete Account</a> --}}
-<ul>
-  <li><a class="nav-a" href="/clubs-page">Clubs Page</a></li>
-  <li><a class="nav-a" href="/my-library">My Library</a></li>
-  <li><a class="nav-a" href="/book-search">Book Search</a></li>
-  {{!-- <li><a href="/">Back to Homepage</a></li> --}}
-</ul>
+<div class="nav-container-custom">
+  <a class="nav-a-delete" href="/delete-account">Delete Account</a>
+  <a class="nav-a" href="/clubs-page">Clubs Page</a>
+  <a class="nav-a" href="/my-library">My Library</a>
+  <a class="nav-a" href="/book-search">Book Search</a>
+</div>
+
 <section class="library-container">
   <div class="club-container">
     {{#if club}}
