--- a/views/partials/user-book-library.handlebars
+++ b/views/partials/user-book-library.handlebars
@@ -12,16 +12,13 @@
       {{#if picture}}
       <img src="{{picture}}">
       {{else}}
-      No Picture Available!
+      <span>No Picture Available!</span>
       {{/if}}
     </div>
     <form method="GET" action="/my-library/delete-book">
       <button class="pointer btn btn-primary" id="book-{{id}}" name="book" type="submit" value="{{id}}">Delete From
         Library</button>
     </form>
-    {{!-- VERY IMPORTANT dont add any more attributes to the left of id!!! if you must add one put it to the right of id!! --}}
-  </div>
   </div>
 </section>
 {{/each}}
-{{!-- <script src="/javascript/delete-book.js"></script> --}}
