--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html" />
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Join a Book Club to let other friends and club members know what you're currently reading. Also see what they are reading as well if anybody is curious what others like to read.">
   <title>Book Club</title>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&family=Special+Elite&display=swap"
     rel="stylesheet">
