--- a/views/partials/not-in-these-clubs.handlebars
+++ b/views/partials/not-in-these-clubs.handlebars
@@ -9,7 +9,7 @@
     {{#each this}}
     <div class="non-club-titles card-title">
       {{!-- clubs user is not following go here --}}
-      <h3>
+      <h3 class="non-club-title">
         {{dataValues.club_title}}
       </h3>
       {{!-- user join club button submission form --}}
